--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "iframe-resize",
-  "main": "iframe-resize.js",
-  "version": "1.0.0",
+  "main": "iframe-resize.min.js",
+  "version": "1.1.0",
   "homepage": "https://github.com/arlaneenalra/iframe-resize",
   "authors": [
     "Chris Salch <emeraldd.chris@gmail.com>"
