--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "homepage": "https://github.com/arlaneenalra/iframe-resize#readme",
   "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-uglify": "^1.3.0"
   }
 }
