--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,15 @@
 {
   "name": "iframe-resize",
   "main": "iframe-resize.min.js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://github.com/arlaneenalra/iframe-resize",
   "authors": [
     "Chris Salch <emeraldd.chris@gmail.com>"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arlaneenalra/iframe-resize.git"
+  },
   "description": "A jQuery plugin that automatically resizes iframes to their content.",
   "keywords": [
     "iframe",
